[package]
name = "muttmates"
version = "0.1.3"
authors = ["Sebastian Kriems <bastobuntu@gmail.com>"]
description = "Utility for retrieving email addresses in a mutt compatible format"
homepage = "https://github.com/skriems/muttmates"
repository = "https://github.com/skriems/muttmates"
readme = "README.md"
keywords = ["vcard"]
categories = ["command-line-utilities", "text-processing"]
license = "Unlicense"
edition = "2018"

[dependencies]
structopt = "0.2.15"
dirs = "1.0.5"

[badges]
travis-ci = { repository = "skriems/muttmates", branch = "master" }
codecov = { repository = "skriems/muttmates", branch = "master", service = "github" }
